--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 
 
     <h3>Fluid container</h3>
-    <div> this is a fluid container and it will go till the end of the page</div>
+    <div class="container" > this is a fluid container and it will go till the end of the page</div>
 
 
     <h3>@centre container</h3>
-    <div>This is a contered container and it will go fill the specified width</div>
+    <div class="container container-center">This is a contered container and it will go fill the specified width</div>
 
     <hr>
 
     <h2>@links</h2>
 
-    <a href="">Primary key</a> <a href="">Secondary key</a>
+    <a class="link primary-link" href="">Primary key</a> <a class="link secondary-link" href="">Secondary key</a>
     <hr>
 
     <h2>@list</h2>
@@ -95,7 +95,7 @@
     <h3>@Header</h3>
 
     <head>
-        <img src="images/undraw_feeling_proud_qne1.svg" alt="">
+        <img src="images/undraw_programming_2svr (1).svg" alt="">
         <h1>Heading inside hero</h1>
     </head>
 
