--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
     <h3>@centre container</h3>
-    <div class="container container-center">This is a contered container and it will go fill the specified width</div>
+    <div class="container container-center">This is a centered container and it will go fill the specified width</div>
 
     <hr>
 
@@ -48,8 +48,9 @@
     <h2>@list</h2>
 
     <h3>unordered list</h3>
+    <p>This list will not have the bullet</p>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
@@ -57,15 +58,15 @@
 
     <h3>unordered inline list</h3>
 
-    <ul>
-        <li>Inline item one</li>
-        <li>Inline item two</li>
-        <li>Inline item three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline" >Inline item one</li>
+        <li  class="list-item-inline" >Inline item two</li>
+        <li  class="list-item-inline" >Inline item three</li>
     </ul>
 
     <h3>reversed order list</h3>
 
-    <ol>
+    <ol reversed >
         <li>Milk</li>
         <li>Milk</li>
         <li>Milk</li>
