--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Component libary</title>
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 
 
 </head>
@@ -32,7 +32,7 @@
 
 
     <h3>Fluid container</h3>
-    <div class="container" > this is a fluid container and it will go till the end of the page</div>
+    <div class="container"> this is a fluid container and it will go till the end of the page</div>
 
 
     <h3>@centre container</h3>
@@ -59,14 +59,14 @@
     <h3>unordered inline list</h3>
 
     <ul class="list-non-bullet">
-        <li class="list-item-inline" >Inline item one</li>
-        <li  class="list-item-inline" >Inline item two</li>
-        <li  class="list-item-inline" >Inline item three</li>
+        <li class="list-item-inline">Inline item one</li>
+        <li class="list-item-inline">Inline item two</li>
+        <li class="list-item-inline">Inline item three</li>
     </ul>
 
     <h3>reversed order list</h3>
 
-    <ol reversed >
+    <ol reversed>
         <li>Milk</li>
         <li>Milk</li>
         <li>Milk</li>
@@ -76,18 +76,20 @@
 
     <h2>@Nav</h2>
 
-    <nav>
-        <div>I am bharat</div>
-        <ul>
-            <li>
-                <a href="">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">I am Bharat</div>
+        <ul class="list-non-bullet nav-pills">
+
+            <li class="list-item-inline">
+                <a class="link" href="">Home</a>
             </li>
-            <li>
-                <a href="">Project</a>
+            <li class="list-item-inline">
+                <a class="link" href="">Project</a>
             </li>
-            <li>
-                <a href="">About</a>
+            <li class="list-item-inline">
+                <a class="link" href="">About</a>
             </li>
+        
         </ul>
     </nav>
 
