--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 
     <h3>@Header</h3>
 
-    <head>
-        <img src="images/undraw_programming_2svr (1).svg" alt="">
-        <h1>Heading inside hero</h1>
-    </head>
+    <header class="hero">
+        <img class="hero-img" src="images/undraw_programming_2svr (1).svg" alt="">
+        <h1 class="hero-heading">Bharat singh the <span class="heading-inverted" >Web developer </span> </h1>
+    </header>
 
     <hr>
     <h2>@Section</h2>
