--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <li class="list-item-inline">
                 <a class="link" href="">About</a>
             </li>
-        
+
         </ul>
     </nav>
 
@@ -99,19 +99,25 @@
 
     <header class="hero">
         <img class="hero-img" src="images/undraw_programming_2svr (1).svg" alt="">
-        <h1 class="hero-heading">Bharat singh the <span class="heading-inverted" >Web developer </span> </h1>
+        <h1 class="hero-heading">Bharat singh the <span class="heading-inverted">Web developer </span> </h1>
     </header>
 
     <hr>
     <h2>@Section</h2>
-    <section>
-        <h3>Fluid container</h3>
-        <p>This will go end to end with little margin at both side</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>White section</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
     </section>
 
-    <section>
-        <h3>Off white section</h3>
-        <p>This will have grey backgroud</p>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Off white section</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
     </section>
     <hr>
 
