--- a/index.html
+++ b/index.html
@@ -120,13 +120,19 @@
 
     </section>
     <hr>
-
-    <footer>
+       <h2>@Footer</h2>
+    <footer class="footer-heading">
         <div>Some small heading inside footer</div>
-        <ul>
-            <li>Socialone</li>
-            <li>SocialTwo</li>
-            <li>SocialThree</li>
+        <ul class="social-links list-non-bullet">
+
+            <li class="list-item-inline"> <a class="link" href="/">Socialone</a> 
+            </li>
+
+            <li class="list-item-inline"><a class="link" href="/">SocialTwo</a>
+            </li>
+
+            <li class="list-item-inline"><a class="link" href="/">SocialThree</a> 
+            </li>
         </ul>
     </footer>
 
