--- a/blogs.html
+++ b/blogs.html
@@ -26,9 +26,27 @@
     </nav>
 
     <header class="hero">
+        <img class="hero-img" id="blog-img" src="images/undraw_Blog_post_re_fy5x.svg" alt="">
       <h1 class="hero-heading">My <span class="heading-inverted">blogs </span> </h1>
     </header>
-   
+      
+    <footer class="footer">
+        <div class="footer-heading">
+            Social Media </div>
+        <ul class="social-links list-non-bullet">
+
+            <li class="list-item-inline"> <a class="link" href="https://github.com/bharats9768">Github</a>
+            </li>
+
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/bharat50576866">Twitter</a>
+            </li>
+
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/bharat-singh-1881b9182">Linkedin</a>
+            </li>
+        </ul>
+    </footer>
+
+
     
 </body>
 </html>
