--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting </p>
         </div>
 
     </section>
@@ -46,7 +46,7 @@
     <section class="section">
         <div class="container container-center">
             <h1>Projects</h1>
-            <p class="project-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p class="project-info">I like to showcase my work and thus, you can see my projects hosted online </p>
             <a class="link primary-link " href="/projects.html">See Projects</a>
         </div>
         
@@ -56,8 +56,8 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-            <p class="project-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <a class="link secondary-link" href="/blogs.html">Read Blogs</a>
+            <p class="project-info">I am also working on some technical and non techincal blogs. I like to document my journey of learning. </p>
+            <a class="link primary-link " href="/blogs.html">Read Blogs</a>
         </div>
         
     </section>
