--- a/projects.html
+++ b/projects.html
@@ -36,12 +36,12 @@
 
         <li class="showcase">
             <div class="container container-center ">
-                <h1>How well do you Know me? </h1>
+                <h1>DO you know me ? </h1>
                 <small>Project Date</small>
                 <p class="project-info"> A CLI app built with <strong>nodeJS</strong>. You can send this to your friends
                     and find out who really knows you </p>
-                <a class="link primary-link link-margin" href="">Play Game</a>
-                <a class="link secondary-link" href="">View source</a>
+                <a class="link primary-link link-margin" href="https://replit.com/@bharatsingh3/DO-you-know-me-Quiz?embed=true#index.js">Play Game</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/DO-you-know-me-Quiz">View source</a>
             </div>
 
         </li>
@@ -52,7 +52,7 @@
                 <small>Project Date</small>
                 <p class="project-info"> A CLI app built with <strong>nodeJS</strong>. You can send this to your friends
                     and find out who are marvel fans </p>
-                <a class="link primary-link link-margin" href="">Play Game</a>
+                <a class="link primary-link link-margin" href="https://replit.com/@bharatsingh3/Fandom-Quiz-app?embed=true#index.js">Play Game</a>
                 <a class="link secondary-link" href="">View source</a>
             </div>
 
