New Project added

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <li class="showcase">
             <div class="container container-center ">
                 <h1>DO you know me ? </h1>
-                <small>Project Date</small>
+                <small></small>
                 <p class="project-info"> A CLI app built with <strong>nodeJS</strong>. You can send this to your friends
                     and find out who really knows you </p>
                 <a class="link primary-link link-margin" href="https://replit.com/@bharatsingh3/DO-you-know-me-Quiz?embed=true#index.js">Play Game</a>
@@ -49,14 +49,26 @@
         <li class="showcase">
             <div class="container container-center">
                 <h1>Are you a marvel fan? </h1>
-                <small>Project Date</small>
+                <small></small>
                 <p class="project-info"> A CLI app built with <strong>nodeJS</strong>. You can send this to your friends
                     and find out who are marvel fans </p>
                 <a class="link primary-link link-margin" href="https://replit.com/@bharatsingh3/Fandom-Quiz-app?embed=true#index.js">Play Game</a>
-                <a class="link secondary-link" href="">View source</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Fandom-Quiz-app-">View source</a>
             </div>
 
         </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>minionese </h1>
+                <small></small>
+                <p class="project-info"> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language. </p>
+                <a class="link primary-link link-margin" href="https://minions-banana-speaking.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Banana-speak">View source</a>
+            </div>
+
+        </li>
+        
 
     </ul>
 
