--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/undraw_Code_typing_re_p8b9.svg" alt="">
+        <img class="hero-img" src="images\undraw_Code_typing_re_p8b9 (1).svg" alt="">
         <h1 class="hero-heading">My <span class="heading-inverted">projects </span> </h1>
     </header>
 
@@ -65,6 +65,17 @@
                 <p class="project-info"> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language. </p>
                 <a class="link primary-link link-margin" href="https://minions-banana-speaking.netlify.app/">Live Project</a>
                 <a class="link secondary-link" href="https://github.com/bharats9768/Banana-speak">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>Emoji interpreter</h1>
+                <small></small>
+                <p class="project-info"> Library of emojis with meaning. </p>
+                <a class="link primary-link link-margin" href="https://4tod3.csb.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/emoji-interpreter">View source</a>
             </div>
 
         </li>
