--- a/blogs.html
+++ b/blogs.html
@@ -26,7 +26,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" id="blog-img" src="images/undraw_Blog_post_re_fy5x.svg" alt="">
+        <img class="hero-img" id="blog-img" src="images\undraw_Blog_post_re_fy5x (1).svg" alt="">
       <h1 class="hero-heading">My <span class="heading-inverted">blogs </span> </h1>
     </header>
 
