--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,17 @@
             </div>
 
         </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>Cash register app </h1>
+                <small></small>
+                <p class="project-info"> A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes. </p>
+                <a class="link primary-link link-margin" href="https://4tod3.csb.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/emoji-interpreter">View source</a>
+            </div>
+
+        </li>
         
 
     </ul>
