--- a/projects.html
+++ b/projects.html
@@ -71,11 +71,33 @@
 
         <li class="showcase">
             <div class="container container-center">
+                <h1> Donald duck language </h1>
+                <small></small>
+                <p class="project-info"> Are you a fan of donald duck? donald duck language is really funny. Use the translator to convert your text from English to donald duck speak language. </p>
+                <a class="link primary-link link-margin" href="https://donald-duck-speaking.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Donald-duck-speaking">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
                 <h1>Emoji interpreter</h1>
                 <small></small>
                 <p class="project-info"> Library of emojis with meaning. </p>
                 <a class="link primary-link link-margin" href="https://4tod3.csb.app/">Live Project</a>
                 <a class="link secondary-link" href="https://github.com/bharats9768/emoji-interpreter">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>Good movies</h1>
+                <small></small>
+                <p class="project-info"> Libary of one of my favourite movies. </p>
+                <a class="link primary-link link-margin" href="https://eggre.csb.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/React-app-good-movies">View source</a>
             </div>
 
         </li>
