--- a/projects.html
+++ b/projects.html
@@ -107,8 +107,52 @@
                 <h1>Cash register app </h1>
                 <small></small>
                 <p class="project-info"> A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes. </p>
-                <a class="link primary-link link-margin" href="https://4tod3.csb.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/emoji-interpreter">View source</a>
+                <a class="link primary-link link-margin" href="https://simple-cash-register-manager.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/cash-register-manager">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>Is your Birthday lucky or not </h1>
+                <small></small>
+                <p class="project-info"> A website which can help you to check whether your birthday is lucky or not. </p>
+                <a class="link primary-link link-margin" href="https://is-yourbday-luckyornot.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Is-Your-Birthday-lucky">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>learn-triangles </h1>
+                <small></small>
+                <p class="project-info"> A website which helps you to learn about triangles </p>
+                <a class="link primary-link link-margin" href="https://funwith-areaof-triangles.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Fun-with-Triangles">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>Is Your birthday palindrome! </h1>
+                <small></small>
+                <p class="project-info"> App which checks whether your birthday is a palindrome birthday or not. </p>
+                <a class="https://isyour-birthday-palindrome.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Is-your-birthday-a-palindrome">View source</a>
+            </div>
+
+        </li>
+
+        <li class="showcase">
+            <div class="container container-center">
+                <h1>profit-or-loss </h1>
+                <small></small>
+                <p class="project-info"> A website which helps user how much profit or loss he/she is making in percentage & absolute value. </p>
+                <a class="https://stock-profitandloss-purchase.netlify.app/">Live Project</a>
+                <a class="link secondary-link" href="https://github.com/bharats9768/Stock-purchase-profit-and-loss">View source</a>
             </div>
 
         </li>
