--- a/projects.html
+++ b/projects.html
@@ -140,8 +140,11 @@
                 <h1>Is Your birthday palindrome! </h1>
                 <small></small>
                 <p class="project-info"> App which checks whether your birthday is a palindrome birthday or not. </p>
-                <a class="https://isyour-birthday-palindrome.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/Is-your-birthday-a-palindrome">View source</a>
+                <a class="link primary-link link-margin" 
+                href="https://isyour-birthday-palindrome.netlify.app/"> Live Project</a>
+
+                <a class="link secondary-link" 
+                href="https://github.com/bharats9768/Is-your-birthday-a-palindrome"> View source</a>
             </div>
 
         </li>
