--- a/projects.html
+++ b/projects.html
@@ -154,7 +154,8 @@
                 <h1>profit-or-loss </h1>
                 <small></small>
                 <p class="project-info"> A website which helps user how much profit or loss he/she is making in percentage & absolute value. </p>
-                <a class="https://stock-profitandloss-purchase.netlify.app/">Live Project</a>
+                <a class="link primary-link link-margin" 
+                href="https://stock-profitandloss-purchase.netlify.app/">Live Project</a>
                 <a class="link secondary-link" href="https://github.com/bharats9768/Stock-purchase-profit-and-loss">View source</a>
             </div>
 
