final blog update

--- a/projects.html
+++ b/projects.html
@@ -1,184 +1,288 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projects | Bharat singh</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Projects | Bharat singh</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
+  <body>
     <nav class="navigation container">
-        <div class="nav-brand">I am Developer</div>
-        <ul class="list-non-bullet nav-pills">
-
-            <li class="list-item-inline">
-                <a class="link" href="/">Home</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link link-active" href="/projects.html">Project</a>
-            </li>
-            <li class="list-item-inline">
-                <a class="link" href="/blogs.html">Blogs</a>
-            </li>
-
-        </ul>
+      <div class="nav-brand">I am Developer</div>
+      <ul class="list-non-bullet nav-pills">
+        <li class="list-item-inline">
+          <a class="link" href="/">Home</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link link-active" href="/projects.html">Project</a>
+        </li>
+        <li class="list-item-inline">
+          <a class="link" href="/blogs.html">Blogs</a>
+        </li>
+      </ul>
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images\undraw_Code_typing_re_p8b9 (1).svg" alt="">
-        <h1 class="hero-heading">My <span class="heading-inverted">projects </span> </h1>
+      <img
+        class="hero-img"
+        src="images\undraw_Code_typing_re_p8b9 (1).svg"
+        alt=""
+      />
+      <h1 class="hero-heading">
+        My <span class="heading-inverted">projects </span>
+      </h1>
     </header>
 
     <ul class="list-non-bullet">
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>DO you know me ?</h1>
+          <small></small>
+          <p class="project-info">
+            A CLI app built with <strong>nodeJS</strong>. You can send this to
+            your friends and find out who really knows you
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://replit.com/@bharatsingh3/DO-you-know-me-Quiz?embed=true#index.js"
+            >Play Game</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/DO-you-know-me-Quiz"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        <li class="showcase">
-            <div class="container container-center ">
-                <h1>DO you know me ? </h1>
-                <small></small>
-                <p class="project-info"> A CLI app built with <strong>nodeJS</strong>. You can send this to your friends
-                    and find out who really knows you </p>
-                <a class="link primary-link link-margin" href="https://replit.com/@bharatsingh3/DO-you-know-me-Quiz?embed=true#index.js">Play Game</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/DO-you-know-me-Quiz">View source</a>
-            </div>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Are you a marvel fan?</h1>
+          <small></small>
+          <p class="project-info">
+            A CLI app built with <strong>nodeJS</strong>. You can send this to
+            your friends and find out who are marvel fans
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://replit.com/@bharatsingh3/Fandom-Quiz-app?embed=true#index.js"
+            >Play Game</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Fandom-Quiz-app-"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        </li>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>minionese</h1>
+          <small></small>
+          <p class="project-info">
+            Are you a fan of minions? Did you know that the gibberish they say
+            is an actual language. Use the translator to convert your text from
+            English to Minion speak or Banana language.
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://minions-banana-speaking.netlify.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Banana-speak"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>Are you a marvel fan? </h1>
-                <small></small>
-                <p class="project-info"> A CLI app built with <strong>nodeJS</strong>. You can send this to your friends
-                    and find out who are marvel fans </p>
-                <a class="link primary-link link-margin" href="https://replit.com/@bharatsingh3/Fandom-Quiz-app?embed=true#index.js">Play Game</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/Fandom-Quiz-app-">View source</a>
-            </div>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Donald duck language</h1>
+          <small></small>
+          <p class="project-info">
+            Are you a fan of donald duck? donald duck language is really funny.
+            Use the translator to convert your text from English to donald duck
+            speak language.
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://donald-duck-speaking.netlify.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Donald-duck-speaking"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        </li>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Emoji interpreter</h1>
+          <small></small>
+          <p class="project-info">Library of emojis with meaning.</p>
+          <a class="link primary-link link-margin" href="https://4tod3.csb.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/emoji-interpreter"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>minionese </h1>
-                <small></small>
-                <p class="project-info"> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language. </p>
-                <a class="link primary-link link-margin" href="https://minions-banana-speaking.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/Banana-speak">View source</a>
-            </div>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Good movies</h1>
+          <small></small>
+          <p class="project-info">Libary of one of my favourite movies.</p>
+          <a class="link primary-link link-margin" href="https://eggre.csb.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/React-app-good-movies"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        </li>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Cash register app</h1>
+          <small></small>
+          <p class="project-info">
+            A cash register manager which helps the user by telling how can
+            he/she return the change to the customer with minimum number of
+            notes.
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://simple-cash-register-manager.netlify.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/cash-register-manager"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        <li class="showcase">
-            <div class="container container-center">
-                <h1> Donald duck language </h1>
-                <small></small>
-                <p class="project-info"> Are you a fan of donald duck? donald duck language is really funny. Use the translator to convert your text from English to donald duck speak language. </p>
-                <a class="link primary-link link-margin" href="https://donald-duck-speaking.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/Donald-duck-speaking">View source</a>
-            </div>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Is your Birthday lucky or not</h1>
+          <small></small>
+          <p class="project-info">
+            A website which can help you to check whether your birthday is lucky
+            or not.
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://is-yourbday-luckyornot.netlify.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Is-Your-Birthday-lucky"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        </li>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>learn-triangles</h1>
+          <small></small>
+          <p class="project-info">
+            A website which helps you to learn about triangles
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://funwith-areaof-triangles.netlify.app/"
+            >Live Project</a
+          >
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Fun-with-Triangles"
+            >View source</a
+          >
+        </div>
+      </li>
 
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>Emoji interpreter</h1>
-                <small></small>
-                <p class="project-info"> Library of emojis with meaning. </p>
-                <a class="link primary-link link-margin" href="https://4tod3.csb.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/emoji-interpreter">View source</a>
-            </div>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>Is Your birthday palindrome!</h1>
+          <small></small>
+          <p class="project-info">
+            App which checks whether your birthday is a palindrome birthday or
+            not.
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://isyour-birthday-palindrome.netlify.app/"
+          >
+            Live Project</a
+          >
 
-        </li>
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Is-your-birthday-a-palindrome"
+          >
+            View source</a
+          >
+        </div>
+      </li>
 
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>Good movies</h1>
-                <small></small>
-                <p class="project-info"> Libary of one of my favourite movies. </p>
-                <a class="link primary-link link-margin" href="https://eggre.csb.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/React-app-good-movies">View source</a>
-            </div>
+      <li class="showcase">
+        <div class="container container-center">
+          <h1>profit-or-loss</h1>
+          <small></small>
+          <p class="project-info">
+            A website which helps user how much profit or loss he/she is making
+            in percentage & absolute value.
+          </p>
+          <a
+            class="link primary-link link-margin"
+            href="https://stock-profitandloss-purchase.netlify.app/"
+            >Live Project</a
+          >
 
-        </li>
-
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>Cash register app </h1>
-                <small></small>
-                <p class="project-info"> A cash register manager which helps the user by telling how can he/she return the change to the customer with minimum number of notes. </p>
-                <a class="link primary-link link-margin" href="https://simple-cash-register-manager.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/cash-register-manager">View source</a>
-            </div>
-
-        </li>
-
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>Is your Birthday lucky or not </h1>
-                <small></small>
-                <p class="project-info"> A website which can help you to check whether your birthday is lucky or not. </p>
-                <a class="link primary-link link-margin" href="https://is-yourbday-luckyornot.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/Is-Your-Birthday-lucky">View source</a>
-            </div>
-
-        </li>
-
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>learn-triangles </h1>
-                <small></small>
-                <p class="project-info"> A website which helps you to learn about triangles </p>
-                <a class="link primary-link link-margin" href="https://funwith-areaof-triangles.netlify.app/">Live Project</a>
-                <a class="link secondary-link" href="https://github.com/bharats9768/Fun-with-Triangles">View source</a>
-            </div>
-
-        </li>
-
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>Is Your birthday palindrome! </h1>
-                <small></small>
-                <p class="project-info"> App which checks whether your birthday is a palindrome birthday or not. </p>
-                <a class="link primary-link link-margin" 
-                href="https://isyour-birthday-palindrome.netlify.app/"> Live Project</a>
-
-                <a class="link secondary-link" 
-                href="https://github.com/bharats9768/Is-your-birthday-a-palindrome"> View source</a>
-            </div>
-
-        </li>
-
-        <li class="showcase">
-            <div class="container container-center">
-                <h1>profit-or-loss </h1>
-                <small></small>
-                <p class="project-info"> A website which helps user how much profit or loss he/she is making in percentage & absolute value. </p>
-                <a class="link primary-link link-margin" 
-                href="https://stock-profitandloss-purchase.netlify.app/">Live Project</a>
-                
-                <a class="link secondary-link" href="https://github.com/bharats9768/Stock-purchase-profit-and-loss">View source</a>
-            </div>
-
-        </li>
-        
-
+          <a
+            class="link secondary-link"
+            href="https://github.com/bharats9768/Stock-purchase-profit-and-loss"
+            >View source</a
+          >
+        </div>
+      </li>
     </ul>
 
     <footer class="footer">
-        <div class="footer-heading">
-            Social Media </div>
-        <ul class="social-links list-non-bullet">
+      <div class="footer-heading">Social Media</div>
+      <ul class="social-links list-non-bullet">
+        <li class="list-item-inline">
+          <a class="link" href="https://github.com/bharats9768">Github</a>
+        </li>
 
-            <li class="list-item-inline"> <a class="link" href="https://github.com/bharats9768">Github</a>
-            </li>
+        <li class="list-item-inline">
+          <a class="link" href="https://twitter.com/bharat50576866">Twitter</a>
+        </li>
 
-            <li class="list-item-inline"><a class="link" href="https://twitter.com/bharat50576866">Twitter</a>
-            </li>
-
-            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/bharat-singh-1881b9182">Linkedin</a>
-            </li>
-        </ul>
+        <li class="list-item-inline">
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/bharat-singh-ba0245222/"
+            >Linkedin</a
+          >
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
