--- a/projects.html
+++ b/projects.html
@@ -143,7 +143,7 @@
           <h1>Good movies</h1>
           <small></small>
           <p class="project-info">Libary of one of my favourite movies.</p>
-          <a class="link primary-link link-margin" href="https://eggre.csb.app/"
+          <a class="link primary-link link-margin" href="https://f51iw.csb.app/"
             >Live Project</a
           >
           <a
