--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav class="navigation container">
-      <div class="nav-brand">I am Developer</div>
+      <div class="nav-brand"> Web Developer</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link link-active" href="/">Home</a>
@@ -33,7 +33,7 @@
         alt=""
       />
       <h1 class="hero-heading">
-        Bharat singh the <span class="heading-inverted">Web developer </span>
+        Bharat singh  <span class="heading-inverted"> </span>
       </h1>
     </header>
 
