--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         alt=""
       />
       <h1 class="hero-heading">
-        Bharat singh am learning programming and to make web applications at <span class="heading-inverted"> </span>
+        Bharat singh am learning programming and to make web applications at <span class="heading-inverted"> Neog Camp </span>
       </h1>
     </header>
 
