Github link update

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="footer-heading">Social Media</div>
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/bharats9768">Github</a>
+          <a class="link" href="https://github.com/Itsmebharat00">Github</a>
         </li>
 
         <li class="list-item-inline">
