--- a/blog1.html
+++ b/blog1.html
@@ -52,7 +52,7 @@
             Social Media </div>
         <ul class="social-links list-non-bullet">
 
-            <li class="list-item-inline"> <a class="link" href="https://github.com/bharats9768">Github</a>
+            <li class="list-item-inline"> <a class="link" href="https://github.com/Itsmebharat00">Github</a>
             </li>
 
             <li class="list-item-inline"><a class="link" href="https://twitter.com/bharat50576866">Twitter</a>
