--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav class="navigation container">
-      <div class="nav-brand"> Web Developer</div>
+      <div class="nav-brand">Web Developer</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link link-active" href="/">Home</a>
@@ -33,7 +33,8 @@
         alt=""
       />
       <h1 class="hero-heading">
-        Bharat singh am learning programming and to make web applications at <span class="heading-inverted"> Neog Camp </span>
+        Am Bharat singh, am learning programming and to make web applications at
+        <span class="heading-inverted">Neog Camp</span>
       </h1>
     </header>
 
@@ -83,8 +84,9 @@
           <a
             class="link"
             href="https://www.linkedin.com/in/bharat-singh-ba0245222/"
-            >Linkedin</a
           >
+            Linkedin
+          </a>
         </li>
       </ul>
     </footer>
