--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav class="navigation container">
-      <div class="nav-brand">Web Developer</div>
+      <div class="nav-brand">Bharat Singh</div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
           <a class="link link-active" href="/">Home</a>
@@ -33,8 +33,9 @@
         alt=""
       />
       <h1 class="hero-heading">
-        Am Bharat singh, am learning programming and to make web applications at
-        <span class="heading-inverted">Neog Camp</span>
+        Hello Am Bharat singh
+        <strong>Welcome to</strong>
+        <span class="heading-inverted">My Portfolio</span>
       </h1>
     </header>
 
